syntax = "proto3";

package tdexa.v1;

import "google/api/annotations.proto";

/**
 * Market service spec
 */
service Market {
  rpc ListMarketIDs(ListMarketIDsRequest) returns (ListMarketIDsReply) {
    option (google.api.http) = {
      post: "/v1/markets"
      body: "*"
    };
  }
}

message ListMarketIDsRequest {
  repeated MarketRequest markets_request = 1;
}

message ListMarketIDsReply {
  repeated int64 ids = 1;
}

message MarketRequest {
  string url = 1;
  string base_asset = 2;
  string quote_asset = 3;
}